added popup galleries

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/" class="fa fa-home">home</a></li>
-        <li><a href="#" class="fa fa-camera">gallery</a></li>
+        <li><a class="fa fa-camera" data-toggle="modal" data-target="#galleries">gallery</a></li>
         <li><a class="fa fa-users" data-toggle="modal" data-target="#about">about</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
