--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,18 @@
     </div><!-- closing modal-content class -->
   </div><!-- closing model-dialog class -->
 </div><!-- closing model class -->
+
+<!-- bootstraping about page to popup  -->
+<div class="modal fade" id="galleries" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <%=render 'galleries1'%></div>
+    </div><!-- closing modal-content class -->
+  </div><!-- closing model-dialog class -->
+</div><!-- closing model class -->
+
+
 <%= yield %>
 
 <footer>
