--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -325,4 +325,18 @@ FOOTER {
     font-size: 10px;
 }
 
+#modal-image {
+    width: 100%;
+    height: 600px;
+    margin: 0 auto;
+    padding: 0 auto;
+    
+}
+
+.modal-item img {
+    width: 30%;
+    margin: 0 auto;
+    border: none;
+}
+
 
