--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -358,18 +358,23 @@ FOOTER {
 
 }*/
 
+.modal-content {
+  background-color: black;
+  margin: 0 auto;
+}
+
 #modal-image {
     width: 100%;
-    height: 600px;
-    margin: 0 auto;
-    padding: 0 auto;
+    margin: 10px auto;
     
 }
 
-.modal-item img {
-    width: 30%;
-    margin: 0 auto;
-    border: none;
+img.modal-item {
+    width: 24%;
+    border-radius: 5px;
+    border: 5px solid white;
+    margin-left: 5px;
+    margin-top: 5px;
 }
 
 
