--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,8 @@
-<div class = "footer">
-	<ul class = "icons">
-		<!-- <i class="fa fa-facebook-square"></i> -->
-		<a href="https://twitter.com/FeedYoself" target="_blank"><i class="fa fa-twitter-square"></i></a>
-		<span> ©2015 FEED YO'SELF, LLC. -1520 2nd St, Santa Monica, CA. (877) 123-5678. All rights reserved.</span>
-	</ul>
-
-
-
+<div ="footer" class>
+  <ul ="icons" class>
+    <a href="https://twitter.com/FeedYoself" target="_blank"><i class="fa fa-twitter-square"/></a>
+    <span>
+      ©2015 FEED YO'SELF, LLC. -1520 2nd St, Santa Monica, CA. (877) 123-5678. All rights reserved.
+    </span>
+  </ul>
 </div>
