--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,38 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Feedyoself</title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <script src="http://maps.googleapis.com/maps/api/js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <!-- // <script src = "js/bootstrap.js"></script> -->
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
-<link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
-  <%= csrf_meta_tags %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+      <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+      <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
+      <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
+      <%= csrf_meta_tags %>
 </head>
-<body>
-<div class = "navigation_bar">
-<%=render partial: 'layouts/nav'%>
-</div>
-<!-- bootstraping about page to popup  -->
-<div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-       <div class = "about">
-        <%=render 'about'%></div>
-      </div><!-- closing about -->
-    </div><!-- closing modal-content class -->
-  </div><!-- closing model-dialog class -->
-</div><!-- closing model class -->
-<%= yield %>
 
-<footer>
-  <%= render partial: 'layouts/footer' %>
-</footer>
+<body>
+  <div class="navigation_bar">
+    <%=render partial: 'layouts/nav'%>
+  </div>
+  <!-- bootstraping about page to popup  -->
+  <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <div class="about">
+          <%=render 'about'%>
+        </div>
+      </div>
+      <!-- closing about -->
+    </div>
+    <!-- closing modal-content class -->
+  </div>
+  <!-- closing model-dialog class -->
+  </div>
+  <!-- closing model class -->
+  <%= yield %>
+
+    <footer>
+      <%= render partial: 'layouts/footer' %>
+    </footer>
 
 
 </body>
+
 </html>
