--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -3,30 +3,21 @@
 
 <div class = "search">
   <form class="form-inline">
-      <!-- <div class="form-group">
-        <label class="cuisine">Cuisine:</label>
-        <input type="text" class="form-control" id="exampleInputName2" placeholder="enter your dish">
-      </div> -->
-    <!-- <div class="form-group">
-      <label class="location">Location:</label>
-      <input type="email" class="form-control" id="location" placeholder=" 90021 or Santa Monica">
-    </div> -->
-    <!-- <button type="submit" class="fa fa-location-arrow"></button> -->
+
      <div class="form-group">
         <input type="text" class="form-control" id="price" placeholder="NAME YO PRICE">
 
       <button id="submit" type="button" class="btn btn-default">GET FED UP</button>
       </div> <!-- close .form-group -->
 
-    </form> <!-- close .form-horizontal -->
+    </form> <!-- close .form-inline -->
     <span class="error"></span>
 
 </div> <!-- closing .search div  -->
 
 <div class= "empty1"></div>
 <div class="images">
-<%= render "galleries" %>
+  <%= render "galleries" %>
 </div>
-<div class="loadingPizza" style="display:none;">
 
-</div>
+<div class="loadingPizza" style="display:none;"></div>
