fixed footer to prevent multiple twitter icons, put pointer over cursor for links

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,12 +12,15 @@ $colHighlight: white;
 }
 a.fa.fa-users {
   font-family: 'Raleway', sans-serif;
+  cursor: pointer;
 }
 a.fa.fa-camera {
   font-family: 'Raleway', sans-serif;
+  cursor: pointer;
 }
 a.fa.fa-home {
   font-family: 'Raleway', sans-serif;
+  cursor: pointer;
 }
 button#more_items {
   font-family: 'Raleway', sans-serif;
