added feedyoself photo to gallery

--- a/app/views/searches/_galleries1.html.erb
+++ b/app/views/searches/_galleries1.html.erb
@@ -1,14 +1,14 @@
 <div id="modal-image col-md-12" >
-	<span class = "modal-item"><%= image_tag "burger.jpg", :class => "modal-item" %><%= image_tag "chinese.jpg",:class => "modal-item"%><%= image_tag "padthai.jpg", :class => "modal-item"%><%= image_tag "pasta.jpg", :class => "modal-item"%>
-	</span>	
+	<span class = "modal-item"><%= image_tag "FeedYoSelf.png", :class => "modal-item" %><%= image_tag "chinese.jpg",:class => "modal-item"%><%= image_tag "padthai.jpg", :class => "modal-item"%><%= image_tag "pasta.jpg", :class => "modal-item"%>
+	</span>
  </div>
 
  <div id="modal-image col-md-12">
 	<span class = "modal-item"><%= image_tag "pizza.jpg", :class => "modal-item" %><%= image_tag "ramen.jpg",:class => "modal-item"%><%= image_tag "roasted_chicken.jpg", :class => "modal-item"%><%= image_tag "salad.jpg", :class => "modal-item"%>
-	</span>	
+	</span>
  </div>
 
   <div id="modal-image col-md-12">
 	<span class = "modal-item"><%= image_tag "sushi.jpg", :class => "modal-item" %><%= image_tag "taco.jpg",:class => "modal-item"%><%= image_tag "tuna-sashimi.jpg", :class => "modal-item"%><%= image_tag "samhume.jpg", :class => "modal-item"%>
-	</span>	
+	</span>
  </div>
